--- a/lanpeng-admin/src/main/resources/application-druid.yml
+++ b/lanpeng-admin/src/main/resources/application-druid.yml
@@ -6,9 +6,9 @@ spring:
         druid:
             # 主库数据源
             master:
-                url: jdbc:mysql://123.56.249.126:3306/lanpeng?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
-                username: liwusedforremotelpdb
-                password: lanpengcekong6688
+                url: jdbc:mysql://127.0.0.1:3306/lanpeng?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+                username: root
+                password: root
             # 从库数据源
             slave:
                 # 从数据源开关/默认关闭
