--- a/lanpeng-admin/src/main/resources/application.yml
+++ b/lanpeng-admin/src/main/resources/application.yml
@@ -68,13 +68,13 @@ spring:
   # redis 配置
   redis:
     # 地址
-    host: 127.0.0.1
+    host: 47.94.100.119
     # 端口，默认为6379
-    port: 25025
+    port: 6379
     # 数据库索引
     database: 0
     # 密码
-    password: <123456>
+    password: FRERzN2z9*$D=7WH@@be
     # 连接超时时间
     timeout: 10s
     lettuce:
